--- a/cliente_contatos.html
+++ b/cliente_contatos.html
@@ -5,18 +5,18 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <link rel="apple-touch-icon" sizes="180x180" href="/img/favicon/apple-icon-180x180.png">
-    <link rel="icon" type="image/png" sizes="192x192" href="/img/favicon/android-icon-192x192.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="/img/favicon/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="96x96" href="/img/favicon/favicon-96x96.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/img/favicon/favicon-16x16.png">
-    <link rel="manifest" href="/img/favicon/manifest.json">
+    <link rel="apple-touch-icon" sizes="180x180" href="img/favicon/apple-icon-180x180.png">
+    <link rel="icon" type="image/png" sizes="192x192" href="img/favicon/android-icon-192x192.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="img/favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="96x96" href="img/favicon/favicon-96x96.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="img/favicon/favicon-16x16.png">
+    <link rel="manifest" href="img/favicon/manifest.json">
     <meta name="msapplication-TileColor" content="#ffffff">
     <meta name="msapplication-TileImage" content="/img/favicon/ms-icon-144x144.png">
     <meta name="theme-color" content="#ffffff">
 
     <link rel="stylesheet" href="css/bootstrap.min.css">
-    <link rel="stylesheet" href="css/font/bootstrap-icons.css">
+    <link rel="stylesheet" href="css/font/bootstrap-icons.css">s
     <link rel="stylesheet" href="css/style.css">
 
     <title>Quitanda Online :: Área do Cliente :: Contatos</title>
@@ -33,23 +33,23 @@
                 <div class="collapse navbar-collapse">
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
-                            <a class="nav-link text-white" href="/index.html">Principal</a>
+                            <a class="nav-link text-white" href="index.html">Principal</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-white" href="/contato.html">Contato</a>
+                            <a class="nav-link text-white" href="contato.html">Contato</a>
                         </li>
                     </ul>
                     <div class="align-self-end">
                         <ul class="navbar-nav">
                             <li class="nav-item">
-                                <a href="/cliente_pedidos.html" class="nav-link text-white">Logado como <b>Ricardo Maroquio</b></a>
+                                <a href="cliente_pedidos.html" class="nav-link text-white">Logado como <b>Ricardo Maroquio</b></a>
                             </li>
                             <li class="nav-item">
-                                <a href="/login.html" class="nav-link text-white">Sair</a>
+                                <a href="login.html" class="nav-link text-white">Sair</a>
                             </li>
                             <li class="nav-item">
                                 <span class="badge rounded-pill bg-light text-danger position-absolute ms-4 mt-0" title="5 produto(s) no carrinho"><small>5</small></span>
-                                <a href="/carrinho.html" class="nav-link text-white">
+                                <a href="carrinho.html" class="nav-link text-white">
                                     <i class="bi-cart" style="font-size:24px;line-height:24px;"></i>
                                 </a>
                             </li>
@@ -65,25 +65,25 @@
                 <div class="row gx-3">
                     <div class="col-4">
                         <div class="list-group">
-                            <a href="/cliente_dados.html" class="list-group-item list-group-item-action">
+                            <a href="cliente_dados.html" class="list-group-item list-group-item-action">
                                 <i class="bi-person fs-6"></i> Dados Pessoais
                             </a>
-                            <a href="/cliente_contatos.html" class="list-group-item list-group-item-action bg-danger text-light">
+                            <a href="cliente_contatos.html" class="list-group-item list-group-item-action bg-danger text-light">
                                 <i class="bi-mailbox fs-6"></i> Contatos
                             </a>
-                            <a href="/cliente_endereco.html" class="list-group-item list-group-item-action">
+                            <a href="cliente_endereco.html" class="list-group-item list-group-item-action">
                                 <i class="bi-house-door fs-6"></i> Endereço
                             </a>
-                            <a href="/cliente_pedidos.html" class="list-group-item list-group-item-action">
+                            <a href="cliente_pedidos.html" class="list-group-item list-group-item-action">
                                 <i class="bi-truck fs-6"></i> Pedidos
                             </a>
-                            <a href="/cliente_favoritos.html" class="list-group-item list-group-item-action">
+                            <a href="cliente_favoritos.html" class="list-group-item list-group-item-action">
                                 <i class="bi-heart fs-6"></i> Favoritos
                             </a>
-                            <a href="/cliente_senha.html" class="list-group-item list-group-item-action">
+                            <a href="cliente_senha.html" class="list-group-item list-group-item-action">
                                 <i class="bi-lock fs-6"></i> Alterar Senha
                             </a>
-                            <a href="/index.html" class="list-group-item list-group-item-action">
+                            <a href="index.html" class="list-group-item list-group-item-action">
                                 <i class="bi-door-open fs-6"></i> Sair
                             </a>
                         </div>
@@ -111,21 +111,21 @@
                         &copy; 2020 - Quitanda Online Ltda ME<br> Rua Virtual Inexistente, 171, Compulândia/PC <br> CPNJ 99.999.999/0001-99
                     </div>
                     <div class="col-12 col-md-4 text-center">
-                        <a href="/privacidade.html" class="text-decoration-none text-dark">
+                        <a href="privacidade.html" class="text-decoration-none text-dark">
                             Política de Privacidade
                         </a><br>
-                        <a href="/termos.html" class="text-decoration-none text-dark">
+                        <a href="termos.html" class="text-decoration-none text-dark">
                             Termos de Uso
                         </a><br>
-                        <a href="/quemsomos.html" class="text-decoration-none text-dark">
+                        <a href="quemsomos.html" class="text-decoration-none text-dark">
                             Quem Somos
                         </a><br>
-                        <a href="/trocas.html" class="text-decoration-none text-dark">
+                        <a href="trocas.html" class="text-decoration-none text-dark">
                             Trocas e Devoluções
                         </a>
                     </div>
                     <div class="col-12 col-md-4 text-center">
-                        <a href="/contato.html" class="text-decoration-none text-dark">
+                        <a href="contato.html" class="text-decoration-none text-dark">
                             Contato pelo Site
                         </a><br> E-mail: <a href="mailto:email@dominio.com" class="text-decoration-none text-dark">
                             email@dominio.com
@@ -137,7 +137,7 @@
             </div>
         </footer>
     </div>
-    <script src="/node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 
 </html>
