--- a/fechamento_itens.html
+++ b/fechamento_itens.html
@@ -43,7 +43,7 @@
                         <ul class="navbar-nav">
                             <li class="nav-item">
                                 <a href="cadastro.html" class="nav-link text-white">
-                                    Logado como <b>Ricardo Maroquio</b>
+                                    Logado como <b> Mateus Ângelo</b>
                                 </a>
                             </li>
                             <li class="nav-item">
