--- a/cliente_pedidos.html
+++ b/cliente_pedidos.html
@@ -42,8 +42,8 @@
                     <div class="align-self-end">
                         <ul class="navbar-nav">
                             <li class="nav-item">
-                                <a href="cliente_pedidos.html" class="nav-link text-white">Logado como <b>Ricardo
-                                        Maroquio</b></a>
+                                <a href="cliente_pedidos.html" class="nav-link text-white">Logado como <b>
+                                    Mateus Ângelo </b></a>
                             </li>
                             <li class="nav-item">
                                 <a href="login.html" class="nav-link text-white">Sair</a>
